# halfow.github.io

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  about.html  article-docker-space.html  base.html  blog.html  contact.html  index.html  pyproject.toml
css/: prism.css  style.css
generator/: __main__.py  generate.py  tools.py
generator/article/docker-space/: pyproject.toml
generator/article/docker-space/nvim/: Dockerfile  __main__.py  wrapper.py
generator/templates/: about.html.j2  article-docker-space.html.j2  base.html.j2  blog.html.j2  contact.html.j2  index.html.j2  tbd.html.j2
script/: TagCloud.js  prism.js  rain.js
site/: index.html
