[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nvim-docker-wrapper"
version = "0.0.1"
requires-python = ">=3.10"

[project.scripts]
nvim = "nvim.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
nvim = ["Dockerfile"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false
